--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ li, h1, h2, h3, h4, h5, p, a, button{
 
 
 #bgr {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Laddernew.png");
+    background-image: url("Laddernew.png");
     background-position: right;
     min-width: 100%;
     height: 250vh;
@@ -40,7 +40,7 @@ li, h1, h2, h3, h4, h5, p, a, button{
 }
 
 #bgr2 {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Laddernew.png");
+    background-image: url("Laddernew.png");
     background-position: right;
     min-width: 100%;
     height: 250vh;
@@ -131,7 +131,7 @@ header li{
 /* ------------Hero Image----------------- */
 
 .main-dots {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Main dots.png");
+    background-image: url("Main dots.png");
     margin: -4rem auto auto -2rem;
     width: 100%;
     height:100%;
@@ -142,7 +142,7 @@ header li{
 }
 
 .dots {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Blocks.png");
+    background-image: url("Blocks.png");
     background-size: cover;
     position: absolute;
     left:105%;
@@ -179,7 +179,7 @@ header li{
 .hero-right {
     height:35.75rem;
     width:50%;
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Hero pic.jpg");
+    background-image: url("Hero pic.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -245,7 +245,7 @@ span {
 }
 
 .about-pic {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/about-me.jpeg");
+    background-image: url("about-me.jpeg");
     background-color: #737373;
     background-size: cover;
     background-position: center;
@@ -402,7 +402,7 @@ span {
 }
 
 .one {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Elevate.jpeg");
+    background-image: url("Elevate.jpeg");
     background-size: cover;
     top:1rem;
     background-position: left;
@@ -412,22 +412,22 @@ span {
 }
 
 #two {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Maestro.jpeg");
+    background-image: url("Maestro.jpeg");
     background-position: left;
 }
 
 #three {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Web.jpg");
+    background-image: url("Web.jpg");
     background-position: right;
 }
 
 #four {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Drizzle.jpeg");
+    background-image: url("Drizzle.jpeg");
     background-position: center;
 }
 
 #five {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Flipside.jpeg");
+    background-image: url("Flipside.jpeg");
     background-position: left;
 }
 
@@ -455,7 +455,7 @@ span {
 }
 /*--- 
 #bgr2 {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder2.png");
+    background-image: url("Ladder2.png");
     width: 86.55vw;
     height: 130vh;
     top:61rem;
