--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 html {
     box-sizing: border-box;
 } 
-
+body {
+    position:relative;
+}
 a {
     text-decoration: none;
 }
@@ -27,29 +29,16 @@ li, h1, h2, h3, h4, h5, p, a, button{
     margin: 0px;
 }
 
-
-#bgr {
-    background-image: url("Laddernew.png");
-    background-position: right;
-    min-width: 100%;
-    height: 250vh;
+.bgr {
+    width:100%;
+    min-height:3000px;
+    background-color: white;
+    margin: 0 auto;
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder.png");
+    background-size:contain;
+    background-repeat: no-repeat;
+    position: absolute;
     z-index: -3;
-    position: absolute;
-    background-size:cover;
-    background-repeat: no-repeat;
-}
-
-#bgr2 {
-    background-image: url("Laddernew.png");
-    background-position: right;
-    min-width: 100%;
-    height: 250vh;
-    z-index: -5;
-    top:600px;
-    position: absolute;
-    background-size:cover;
-    background-repeat: no-repeat;
-    
 }
 
 main {
@@ -131,7 +120,7 @@ header li{
 /* ------------Hero Image----------------- */
 
 .main-dots {
-    background-image: url("Main dots.png");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Main dots.png");
     margin: -4rem auto auto -2rem;
     width: 100%;
     height:100%;
@@ -142,7 +131,7 @@ header li{
 }
 
 .dots {
-    background-image: url("Blocks.png");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Blocks.png");
     background-size: cover;
     position: absolute;
     left:105%;
@@ -179,7 +168,7 @@ header li{
 .hero-right {
     height:35.75rem;
     width:50%;
-    background-image: url("Hero pic.jpg");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Hero pic.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -245,7 +234,7 @@ span {
 }
 
 .about-pic {
-    background-image: url("about-me.jpeg");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/about-me.jpeg");
     background-color: #737373;
     background-size: cover;
     background-position: center;
@@ -402,7 +391,7 @@ span {
 }
 
 .one {
-    background-image: url("Elevate.jpeg");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Elevate.jpeg");
     background-size: cover;
     top:1rem;
     background-position: left;
@@ -412,22 +401,22 @@ span {
 }
 
 #two {
-    background-image: url("Maestro.jpeg");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Maestro.jpeg");
     background-position: left;
 }
 
 #three {
-    background-image: url("Web.jpg");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Web.jpg");
     background-position: right;
 }
 
 #four {
-    background-image: url("Drizzle.jpeg");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Drizzle.jpeg");
     background-position: center;
 }
 
 #five {
-    background-image: url("Flipside.jpeg");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/Flipside.jpeg");
     background-position: left;
 }
 
@@ -455,7 +444,7 @@ span {
 }
 /*--- 
 #bgr2 {
-    background-image: url("Ladder2.png");
+    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder2.png");
     width: 86.55vw;
     height: 130vh;
     top:61rem;
@@ -535,9 +524,6 @@ footer button:hover {transform: scale(1.04);}
     height: 3rem;
     flex-direction: column;
     align-items: center;
-    padding: 0 15rem 0 15rem;
-    max-width: 800rem;
-    min-width: 300px;
 }
 
 @media only screen and (max-width: 1270px) {
@@ -551,6 +537,12 @@ footer button:hover {transform: scale(1.04);}
     #symbol:hover {transform: scale(1.1);}
     #text:hover {transform: scale(1);}
 
+    .bgr {
+        width:97vw;
+        min-height:3000px;
+        background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder.png");
+        background-size:contain;
+    }
     /*---hero---*/
     .hero-box {
         align-items: left;
@@ -681,6 +673,7 @@ footer button:hover {transform: scale(1.04);}
     main {
         padding:0 20vw;
     }
+    
     /*---navigation---*/
     header li {
         margin: 0;
@@ -889,6 +882,7 @@ footer button:hover {transform: scale(1.04);}
 @media only screen and (max-width: 550px) {
     main {
         padding:0 7vw 0 7vw;
+        
     }
     /*---navigation---*/
     header li {
@@ -902,7 +896,12 @@ footer button:hover {transform: scale(1.04);}
     }
     #symbol:hover {transform: scale(1.1);}
     #text:hover {transform: scale(1);}
-
+    .bgr {
+        width:97vw;
+        min-height:3000px;
+        background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder-media2.png");
+        background-size:contain;
+    }
     .nav-item #logo {
         width: 3.5rem;
     }
