--- a/Css/style.css
+++ b/Css/style.css
@@ -120,7 +120,7 @@ header li{
 /* ------------Hero Image----------------- */
 
 .main-dots {
-    background-image: src=("../Files/Main dots.png");
+    background-image: url=("../Files/Main dots.png");
     margin: -4rem auto auto -2rem;
     width: 100%;
     height:100%;
