--- a/Css/style.css
+++ b/Css/style.css
@@ -168,7 +168,7 @@ header li{
 .hero-right {
     height:35.75rem;
     width:50%;
-    background-image: url("christianbrown-design.com/Pictures/Hero pic.jpg");
+    background-image: url("https://github.com/Cic-brown/christianbrown-design.com/blob/main/Pictures/Hero%20pic.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
