--- a/Css/style.css
+++ b/Css/style.css
@@ -168,7 +168,7 @@ header li{
 .hero-right {
     height:35.75rem;
     width:50%;
-    background-image: url("Pictures/headshot.jpg");
+    background-image: url("../Pictures/headshot.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
