--- a/Css/style-about.css
+++ b/Css/style-about.css
@@ -138,7 +138,7 @@ main {
 
 }
 .about-dots {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Frame 2.png");
+    background-image: url("Files/Frame 2.png");
     display: flex;
     align-items: center;
 }
@@ -149,12 +149,12 @@ main {
 }
 
 .about-dots {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Frame 2.png");
+    background-image: url("Files/Frame 2.png");
     
 }
 
 .about-face {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/631a42b473b2eaab97342bb4_259EB63F-C424-4394-8B64-BA02832F4F1B.jpeg");
+    background-image: url("Pictures/631a42b473b2eaab97342bb4_259EB63F-C424-4394-8B64-BA02832F4F1B.jpeg");
     background-size: 250%;
     background-position:-8rem;
     background-repeat: no-repeat;
@@ -195,7 +195,7 @@ main {
 }
 
 .fun-image {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/631e245c9e7350868b21f3d1_IMAG3886.jpg");
+    background-image: url("Pictures/631e245c9e7350868b21f3d1_IMAG3886.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -218,11 +218,11 @@ main {
 }
 
 #two {
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/631e245cbc22fc533b31cb52_DSC_0312.jpeg");
+    background-image: url("Pictures/631e245cbc22fc533b31cb52_DSC_0312.jpeg");
 }
 
 #three{
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/631e245c92adedb8613d910c_DSC_9096.jpg");
+    background-image: url("Pictures/631e245c92adedb8613d910c_DSC_9096.jpg");
 }
 
 .values p {
@@ -346,7 +346,7 @@ footer button:hover {transform: scale(1.04);}
     }
     /*---about me---*/
     .about-face {
-        background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/631a42b473b2eaab97342bb4_259EB63F-C424-4394-8B64-BA02832F4F1B.jpeg");
+        background-image: url("Pictures/631a42b473b2eaab97342bb4_259EB63F-C424-4394-8B64-BA02832F4F1B.jpeg");
         background-size: cover;
         background-position:-6rem;
         background-repeat: no-repeat;
@@ -393,7 +393,7 @@ footer button:hover {transform: scale(1.04);}
         flex-wrap: wrap;
     }
     .fun-image {
-        background-image: url("/Users/christianbrown/Desktop/2024 website/Pictures/631e245c9e7350868b21f3d1_IMAG3886.jpg");
+        background-image: url("Pictures/631e245c9e7350868b21f3d1_IMAG3886.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -433,7 +433,7 @@ footer button:hover {transform: scale(1.04);}
     
     .bgr {
         background-color: rgb(255, 255, 255);
-        background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder flip.png");
+        background-image: url("Files/Ladder flip.png");
         background-size:contain;
     }
     /*---navigation---*/
@@ -567,7 +567,7 @@ footer button:hover {transform: scale(1.04);}
     #symbol:hover {transform: scale(1.1);}
     #text:hover {transform: scale(1);}
     .bgr {
-        background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder flip.png");
+        background-image: url("Files/Ladder flip.png");
         background-size:cover;
     }
     .nav-item #logo {
