--- a/Css/style-about.css
+++ b/Css/style-about.css
@@ -33,9 +33,9 @@ li, h1, h2, h3, h4, h5, p, a, button{
 .bgr {
     width:100%;
     height:100%;
-    background-color: rgb(116, 93, 93);
+    background-color: #FFFFFF;
     margin: 0 auto;
-    background-image: url("/Users/christianbrown/Desktop/2024 website/Files/Ladder flip.png");
+    background-image: url("Files/Ladder flip.png");
     background-size:cover;
     background-repeat: no-repeat;
     position: absolute;
