--- a/Css/style-about.css
+++ b/Css/style-about.css
@@ -34,6 +34,7 @@ li, h1, h2, h3, h4, h5, p, a, button{
     width:100%;
     height:100%;
     background-color: #FFFFFF;
+    color: #FFFFFF;
     margin: 0 auto;
     background-image: url("Files/Ladder flip.png");
     background-size:cover;
