--- a/Css/style-about.css
+++ b/Css/style-about.css
@@ -33,8 +33,7 @@ li, h1, h2, h3, h4, h5, p, a, button{
 .bgr {
     width:100%;
     height:100%;
-    background-color: #FFFFFF;
-    color: #FFFFFF;
+    background-color: rgb(116, 93, 93);
     margin: 0 auto;
     background-image: url("Files/Ladder flip.png");
     background-size:cover;
