--- a/Css/style-elevate.css
+++ b/Css/style-elevate.css
@@ -34,7 +34,7 @@ li, h1, h2, h3, h4, h5, p, a, button{
     height:50%;
     background-color: rgb(116, 93, 93);
     margin: 0 auto;
-    background-image: url("Files/Ladder flip.png");
+    background-image: url("../Files/Ladder flip.png");
     background-size:cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -128,35 +128,35 @@ main {
     max-width: 100%;
     min-width: 300px;
     min-height:600px;
-    background-image: url("Elevate/1.jpg");
+    background-image: url("../Elevate/1.jpg");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
     margin:0;    
 }
 
-#two {background-image: url("Elevate/2.jpg");}
-#three {background-image: url("Elevate/3.jpg");}
-#four {background-image: url("Elevate/4.jpg");}
-#five {background-image: url("Elevate/5.jpg");}
-#six {background-image: url("Elevate/6.jpg");}
-#seven {background-image: url("Elevate/7.jpg");}
-#eight {background-image: url("Elevate/8.jpg");}
-#nine {background-image: url("Elevate/9.jpg");}
-#ten {background-image: url("Elevate/10.jpg");}
-#eleven {background-image: url("Elevate/11.jpg");}
-#twelve {background-image: url("Elevate/12.jpg");}
-#thirteen {background-image: url("Elevate/13.jpg");}
-#fourteen {background-image: url("Elevate/14.jpg");}
-#fifteen {background-image: url("Elevate/15.jpg");}
-#sixteen {background-image: url("Elevate/16.jpg");}
-#seventeen {background-image: url("Elevate/17.jpg");}
-#eighteen {background-image: url("Elevate/18.jpg");}
-#nineteen {background-image: url("Elevate/19.jpg");}
-#twenty {background-image: url("Elevate/20.jpg");}
-#twenty-one {background-image: url("Elevate/21.jpg");}
-#twenty-two {background-image: url("Elevate/22.jpg");}
-#twenty-three {background-image: url("Elevate/23.jpg");}
+#two {background-image: url("../Elevate/2.jpg");}
+#three {background-image: url("../Elevate/3.jpg");}
+#four {background-image: url("../Elevate/4.jpg");}
+#five {background-image: url("../Elevate/5.jpg");}
+#six {background-image: url("../Elevate/6.jpg");}
+#seven {background-image: url("../Elevate/7.jpg");}
+#eight {background-image: url("../Elevate/8.jpg");}
+#nine {background-image: url("../Elevate/9.jpg");}
+#ten {background-image: url("../Elevate/10.jpg");}
+#eleven {background-image: url("../Elevate/11.jpg");}
+#twelve {background-image: url("../Elevate/12.jpg");}
+#thirteen {background-image: url("../Elevate/13.jpg");}
+#fourteen {background-image: url("../Elevate/14.jpg");}
+#fifteen {background-image: url("../Elevate/15.jpg");}
+#sixteen {background-image: url("../Elevate/16.jpg");}
+#seventeen {background-image: url("../Elevate/17.jpg");}
+#eighteen {background-image: url("../Elevate/18.jpg");}
+#nineteen {background-image: url("../Elevate/19.jpg");}
+#twenty {background-image: url("../Elevate/20.jpg");}
+#twenty-one {background-image: url("../Elevate/21.jpg");}
+#twenty-two {background-image: url("../Elevate/22.jpg");}
+#twenty-three {background-image: url("../Elevate/23.jpg");}
 #twenty-four {background-image: url("../Elevate/24.jpg");}
 
 .arrows {
@@ -175,7 +175,7 @@ main {
     align-items: center;
 }
 .right {
-    background-image: url("Files/Arrowright.jpg");
+    background-image: url("../Files/Arrowright.jpg");
     background-position: center;
     background-size: cover;
     width:4rem;
@@ -278,7 +278,7 @@ footer button:hover {transform: scale(1.04);}
         max-width: 100%;
         min-width: 300px;
         min-height:440px;
-        background-image: url("Elevate/1.jpg");
+        background-image: url("../Elevate/1.jpg");
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
@@ -329,7 +329,7 @@ footer button:hover {transform: scale(1.04);}
     
     .bgr {
         background-color: rgb(255, 255, 255);
-        background-image: url("Files/Ladder flip.png");
+        background-image: url("../Files/Ladder flip.png");
         background-size:contain;
     }
     /*---navigation---*/
