--- a/Css/style.css
+++ b/Css/style.css
@@ -411,7 +411,7 @@ span {
 }
 
 #four {
-    background-image: url(../Pictures/Drizzle.jpeg");
+    background-image: url("../Pictures/Drizzle.jpeg");
     background-position: center;
 }
 
