--- a/Css/style-elevate.css
+++ b/Css/style-elevate.css
@@ -29,7 +29,7 @@ li, h1, h2, h3, h4, h5, p, a, button{
     margin: 0px;
 }
 
-/*--.bgr {
+.bgr {
     width:100%;
     height:50%;
     background-color: rgb(116, 93, 93);
@@ -39,7 +39,7 @@ li, h1, h2, h3, h4, h5, p, a, button{
     background-repeat: no-repeat;
     position: absolute;
     z-index: -3;
-}--*/
+}
 
 main {
     padding:0 15rem 0 15rem;
