--- a/Css/style-maestro.css
+++ b/Css/style-maestro.css
@@ -155,7 +155,7 @@ main {
 #nineteen {background-image: url("../Maestro/19.jpg");}
 #twenty {background-image: url("../Maestro/20.jpg");}
 #twentyone {background-image: url("../Maestro/21.jpg");}
-#twentytwo {background-image: url("../aestro/22.jpg");}
+#twentytwo {background-image: url("../Maestro/22.jpg");}
 #twentythree {background-image: url("../Maestro/23.jpg");}
 #twentyfour {background-image: url("../Maestro/24.jpg");}
 
