--- a/Css/style-flipside.css
+++ b/Css/style-flipside.css
@@ -140,7 +140,7 @@ main {
 #four {background-image: url("../Flipside/4.png");}
 #five {background-image: url("../Flipside/5.png");}
 #six {background-image: url("../Flipside/6.png");}
-#seven {background-image: url("vFlipside/7.png");}
+#seven {background-image: url(../"Flipside/7.png");}
 #eight {background-image: url("../Flipside/8.png");}
 #nine {background-image: url("../Flipside/9.png");}
 #ten {background-image: url("../Flipside/10.png");}
