--- a/Css/style-about.css
+++ b/Css/style-about.css
@@ -247,7 +247,7 @@ main {
     position: relative;
     
 }
-/*--- 
+
 #bgr2 {
     background-image: url("../Ladder2.png");
     width: 86.55vw;
@@ -257,7 +257,7 @@ main {
     position: absolute;
     background-size:cover;
     background-repeat: no-repeat;
-}--*/
+}
 
 /* Footer */
 
